about to deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "htpp://fontes7.github.io/myGamesList",
+  "homepage": "http://fontes7.github.io/myGamesList",
   "name": "my_games_list",
   "version": "0.1.0",
   "private": true,
