--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "homepage": "http://fontes7.github.io/myGamesList",
+  "proxy": "www.myGamesList.github.io.",
   "name": "my_games_list",
   "version": "0.1.0",
   "private": true,
